--- a/08-statefulset/mysql-service-h.yaml
+++ b/08-statefulset/mysql-service-h.yaml
@@ -1,10 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name:  mysql-h
+  name:  mysql-h # mame of service
 spec:
-  selector: #aqui vamos filtrar os POD's, que estão neste serviço
-    app: mysql #pega todos os POD's (nesse vai no deployment) que são goserver
+  #selector: selector all POD's with name mysql
+  selector: 
+    #app: select POD's with name mysql 
+    app: mysql 
   ports:
-    - port: 3306 #porta do service     
+    #port: port of service
+    - port: 3306   
   clusterIP: None
