--- a/08-statefulset/mysql-service-h.yaml
+++ b/08-statefulset/mysql-service-h.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name:  mysql-h # mame of service
+  name:  mysql-h # mame of service ( Headless Service )
 spec:
   #selector: selector all POD's with name mysql
   selector: 
@@ -10,4 +10,4 @@ spec:
   ports:
     #port: port of service
     - port: 3306   
-  clusterIP: None
+  clusterIP: None #only point to DNS
