feature: added description about statefulset

--- a/08-statefulset/statefulset.yaml
+++ b/08-statefulset/statefulset.yaml
@@ -24,7 +24,7 @@ spec:
               value: root
           volumeMounts:
             - mountPath: /var/lib/mysql
-              name: mysql-volume
+              name: mysql-volume #name of volume
 
   volumeClaimTemplates:
   - metadata:
