--- a/11-namespace/security.yaml
+++ b/11-namespace/security.yaml
@@ -26,7 +26,7 @@ metadata:
 subjects:
 - kind: ServiceAccount
   name: server
-  namespace: prod
+  namespace: prod #name of namespace
 roleRef:
   kind: ClusterRole
   name: server-read
