--- a/11-namespace/security.yaml
+++ b/11-namespace/security.yaml
@@ -8,7 +8,7 @@ metadata:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole #type of rule for the cluster
 metadata:
-  name: server-read
+  name: server-read #name of rule 
 rules: #rules bellow for the  cluster
 - apiGroups: [""] #determines which features we will have in our rule
   resources: ["pods","services"] #resources to used
@@ -27,7 +27,7 @@ subjects:
 - kind: ServiceAccount
   name: server
   namespace: prod #name of namespace
-roleRef:
+roleRef: #rule of reference to namespace
   kind: ClusterRole
   name: server-read
   apiGroup: rbac.authorization.k8s.io
